--- a/source/_posts/23012902.md
+++ b/source/_posts/23012902.md
@@ -39,20 +39,21 @@ tags:
 ```
 
 ## a
-超文本链接，它可以是一个字，一个词，或者一组词，也可以是一幅图像，可以点击这些内容来跳转到新的文档或者当前文档中的某个部分。
+超文本链接，它可以是一个字，一个词，或者一组词，也可以是一幅图像，可以点击这些内容来跳转到新的文档或者当前文档中的某个部分；亦或是下载内容，发邮件等。
 
-
-属性 锚点 a标签内写图片
-
-不止跳转链接 下载内容 发邮件等
-
-x-frame-options: sameorigin
+其中有一个属性target，表示以何种方式打开新链接。
+1. `_blank`
+  在一个新打开、未命名的窗口中载入目标文档。
+2. `_self`
+  在当前窗口打开，一般作为默认值可忽略。
+3. `_parent`
+  在自己的父窗口中打开。
+4. `_top`
+  无视当前所在的窗口，直接在最根的窗口打开。
 
 ## div
+纯粹的盒子，多个div每个div独占一行
 
-纯粹的盒子
-
-多个div每个div独占一行
 
 把其他元素包裹起来作为一个整体
 
