--- a/source/_posts/23012902.md
+++ b/source/_posts/23012902.md
@@ -52,24 +52,17 @@ tags:
   无视当前所在的窗口，直接在最根的窗口打开。
 
 ## div
-纯粹的盒子，多个div每个div独占一行
-
-
-把其他元素包裹起来作为一个整体
+纯粹的盒子，多个div每个div独占一行；用于把其他元素包裹起来作为一个整体。
 
 ## span
-
-纯粹的盒子
-
-多个span每个span共用一行
-
-区别特殊文本 显示关键字
+纯粹的盒子，多个span每个span共用一行；用于区别特殊文本，显示关键字。
 
 ## 字符实体
-
+我们想在html文件中使用大小于号是不可以的，会直接被浏览器解析掉，我们需要使用转义的符号，如：
 ```html
 &nbsp;空格
 &lt;小于号
 &gt;大于号
 ```
+
 
