--- a/source/_posts/22110603.md
+++ b/source/_posts/22110603.md
@@ -21,11 +21,8 @@ tags:
 [vscode准备](https://shuangxunian.github.io/2022/12/02/22120202/)
 
 ## html
-[第一份前端代码](https://shuangxunian.github.io/2022/12/05/22120501/)
-[了解元素](https://shuangxunian.github.io/2022/12/05/22120502/)
-[元素的属性以及嵌套](https://shuangxunian.github.io/2022/12/19/22121901/)
-[关于注释](https://shuangxunian.github.io/2022/12/19/22121902/)
-[&lt;meta&gt;：文档级元数据元素](https://shuangxunian.github.io/2022/12/06/22120601/)
+[html页面架构](https://shuangxunian.github.io/2023/01/29/23012901/)
+[html常见元素](https://shuangxunian.github.io/2023/01/29/23012902/)
 
 ## css
 
