--- a/source/_posts/23013001.md
+++ b/source/_posts/23013001.md
@@ -9,8 +9,42 @@ tags:
 - 前端系列课程文章
 ---
 
-## body
+## 用span写h1
+我们先写一个h1标签：
+```html
+<h1>这是h1标签</h1>
+```
 
+然后我们再写一个span标签
+```html
+<span>这是span标签</span>
+```
+
+然后我们给span添加样式：
+```html
+<style>
+  .myh1 {
+    display: block;
+    font-size: 2em;
+    margin-block-start: 0.67em;
+    margin-block-end: 0.67em;
+    margin-inline-start: 0px;
+    margin-inline-end: 0px;
+    font-weight: bold;
+  }
+</style>
+<span class="myh1">这是span标签</span>
+```
+
+我们就可以用span把h1展示出来，同理，我们可以用div或者span甚至任意一个标签表示出来另一个标签，那么为什么前端还要设计这么多的标签，这就涉及到了标签的语义化。
+
+## 什么是语义化
+说白了就是对应的标签做对应的事，这个多写代码就能记住对应的标签。
+
+## 为什么语义化
+- 方便代码维护，减少沟通成本
+- 有利于SEO
+- 方便盲人阅读网页
 
 
 ## 关联
