--- a/source/_posts/23013001.md
+++ b/source/_posts/23013001.md
@@ -1,6 +1,6 @@
 ---
 title: 元素语义化
-excerpt: 什么是语义化以及我们为什么要语义化
+excerpt: 什么是语义化，我们为什么要语义化，什么是SEO
 date: 2023-01-30
 categories:
 - 技术文章
@@ -45,6 +45,11 @@ tags:
 - 方便代码维护，减少沟通成本
 - 有利于SEO
 - 方便盲人阅读网页
+
+## 什么是SEO
+中文为搜索引擎优化。是一种利用搜索引擎的规则提高网站在有关搜索引擎内的自然排名。目的是让其在行业内占据领先地位，获得品牌收益。很大程度上是网站经营者的一种商业行为，将自己或自己公司的排名前移。
+
+好的语义化可以提高网站排名，再往上就需要给搜索引擎掏钱了。
 
 
 ## 关联
