--- a/source/_posts/23013101.md
+++ b/source/_posts/23013101.md
@@ -12,6 +12,54 @@ tags:
 ## 什么是css
 如前文所说，css是高矮胖瘦，可以给页面进行布局，也可以对html添加各种样式。
 
+## 语法
+css语法可以简单理解成：
+```
+选择器 括号
+  属性：值
+括回
+```
+
+我们一个选择器可以有多个属性值，每个属性有特定的值，这个后续会讲一下常见的属性。
+
+我们从例子入手：
+```css
+h1 {
+    color: red;
+    font-size: 5em;
+}
+```
+
+h1就是标题，括号内英文翻译过来就是，颜色：红色，字体大小：5em；因此这段代码表达的意义就是我把我h1的标题颜色改成红色，大小改成5em。
+
+## css绑定到所需元素上
+- 内联样式
+  ```html
+  <span style="color: red;">这是内联样式</span>
+  ```
+- 内部样式表
+  ```html
+  <style>
+    div {
+      color: green;
+    }
+    .only-one {
+      font-size: 40px;
+    }
+  </style>
+  <div>这是内部样式表</div>
+  <div class="only-one">这是内部样式表</div>
+  ```
+
+- 外部样式表
+  直接通过`<link rel="stylesheet" href="">`引入css文件，即可生效
+
+## 多个css文件引入
+当一组文件需要引入多个外部css的时候，我们可以先合并到一起，然后在每个文件中直接引入一个：
+```css
+@import url('./1.css')
+```
+
 
 
 
