--- a/source/_posts/23013101.md
+++ b/source/_posts/23013101.md
@@ -53,6 +53,13 @@ h1就是标题，括号内英文翻译过来就是，颜色：红色，字体大
 
 - 外部样式表
   直接通过`<link rel="stylesheet" href="">`引入css文件，即可生效
+  
+## 什么是link
+常见有两个功能
+1. 引入css样式`<link rel="stylesheet" href="">`
+2. 引入icon，即浏览器上的图标`<link rel="icon" href="">`
+
+剩下的可以在[MDN](https://developer.mozilla.org/zh-CN/docs/Web/HTML/Element/link)查到，不是重点，这里不再赘述
 
 ## 多个css文件引入
 当一组文件需要引入多个外部css的时候，我们可以先合并到一起，然后在每个文件中直接引入一个：
