--- a/source/_posts/23013001.md
+++ b/source/_posts/23013001.md
@@ -9,6 +9,9 @@ tags:
 - 前端系列课程文章
 ---
 
+## 用浏览器查看样式
+按f12或者右键检查，即可调出来样式查看；左上角的指针点击即可在页面选中元素，elements是html，下边的styles是css。
+
 ## 用span写h1
 我们先写一个h1标签：
 ```html
