--- a/source/_posts/23020202.md
+++ b/source/_posts/23020202.md
@@ -30,7 +30,7 @@ tags:
 字体粗细，默认：400，加粗为700；取值为1-1000；如果一定要动，最好取整百的值，只需要记住400 700两个值即可。
 
 ## line-height
-一行文字所占据的高度。
+一行文字所占据的高度，常用来给文字高度居中。
 
 ![](https://api2.mubu.com/v3/document_image/4314e5e4-46cf-43eb-b4ba-dc46b55b6bd1-3807603.jpg)
 
