--- a/source/_posts/23020202.md
+++ b/source/_posts/23020202.md
@@ -39,6 +39,21 @@ tags:
 - 半行距：行距的一半。半行距 = (行高 - 字号) / 2。在 CSS 中的margin-top不是从文字的顶线算起，而是从顶线半行距的上方开始算起。同理，margin-bottom是从底线半行距的下方开始算起。
 - x-height：x字高，是指字母的基本高度，精确地说，就是基线baseline和主线mean line之间的距离。
 
+## font
+我们想给一个元素添加字体样式的话，如果按照一行行添加实在太多了；因此有一个简写，即`font`，可以用来作为 font-style, font-variant, font-weight, font-size, line-height 和 font-family 属性的简写。
+
+- 必须包含以下值：
+  - <font-size>
+  - <font-family>
+- 可以选择性包含以下值：
+  - <font-style>
+  - <font-variant>
+  - <font-weight>
+  - <line-height>
+- font-style, font-variant 和 font-weight 必须在 font-size 之前
+- 在 CSS 2.1 中 font-variant 只可以是 normal 和 small-caps
+- line-height 必须跟在 font-size 后面，由 "/" 分隔，例如 "16px/3"
+- font-family 必须最后指定
 
 
 
