--- a/source/_posts/23020301.md
+++ b/source/_posts/23020301.md
@@ -66,6 +66,28 @@ div {
 }
 ```
 
+### 属性选择器（Attribute selector）
+按照给定的属性，选择所有匹配的元素。在开发中并不常用。
+
+语法：`[attr] [attr=value]`
+```css
+/* 属性选择器 */
+/* 匹配所有属性为title的元素 */
+[title] {
+  width: 400px;
+  height: 400px;
+  background-color: green;
+}
+/* 匹配所有属性为title且值为my-h2的元素 */
+[title=my-h2] {
+  width: 500px;
+  height: 500px;
+  background-color: gray;
+}
+```
+
+
+
 
 
 
