--- a/source/_posts/23020301.md
+++ b/source/_posts/23020301.md
@@ -50,6 +50,12 @@ div {
   width: 200px;
   height: 200px;
 }
+/* 当直接选择制定元素的类时 */
+div.eg {
+  width: 200px;
+  height: 200px;
+}
+
 ```
 
 ### ID 选择器（ID selector）
