--- a/source/_posts/23020601.md
+++ b/source/_posts/23020601.md
@@ -1,6 +1,6 @@
 ---
-title: 伪类
-excerpt: 什么是伪类，以及常见的伪类元素
+title: 伪类和伪元素
+excerpt: 什么是伪类、伪元素，以及常见的伪类与伪元素元素
 date: 2023-01-31
 categories:
 - 技术文章
@@ -30,6 +30,21 @@ a:focus 表示匹配聚焦状态的selector选择器元素。
 
 常见的还有更多，其他的在后续会讲，先就讲这些
 
+## 伪元素
+伪元素是一个附加至选择器末的关键词，允许你对被选择元素的特定部分修改样式。伪类有一个冒号，伪元素有两个，虽然说一个也能识别，但是出于可读性的考虑，还是建议要用两个冒号。
+
+## 常见的伪元素
+### ::first-line
+针对首行文本设置属性。
+
+### ::first-letter
+针对首字母设置属性。
+
+### ::before
+::after用来创建一个伪元素，作为已选中元素的最后一个子元素。通常会配合content属性来为该元素添加装饰内容。这个虚拟元素默认是行内元素。
+
+### ::after
+::before 创建一个伪元素，其将成为匹配选中的元素的第一个子元素。常通过 content 属性来为一个元素添加修饰性的内容。此元素默认为行内元素。
 
 
 
