--- a/source/_posts/22110603.md
+++ b/source/_posts/22110603.md
@@ -29,7 +29,9 @@ tags:
 [常见的属性](https://shuangxunian.github.io/2023/01/31/23013102/)
 [元素语义化](https://shuangxunian.github.io/2023/01/30/23013001/)
 [css的颜色](https://shuangxunian.github.io/2023/02/01/23020101/)
-[]()
+[文本属性](https://shuangxunian.github.io/2023/02/02/23020201/)
+[css选择器](https://shuangxunian.github.io/2023/02/03/23020301/)
+[css组合器](https://shuangxunian.github.io/2023/02/03/23020302/)
 
 ## js
 
