--- a/source/_posts/23020901.md
+++ b/source/_posts/23020901.md
@@ -9,4 +9,75 @@ tags:
 - 服务端
 ---
 
-## 
+
+## 服务器系统
+刚开始用的centos8，然后说centos适合大型企业，社区环境不如Ubuntu，我就自己搞着玩，然后直接重装系统，装了Ubuntu 18。
+
+云崽的仓库被ban了，现在是从gitee克隆出来上一个版本，然后后续的维护要自己来。
+
+
+## 安装redis
+```shell
+sudo apt update
+sudo apt install redis-server
+sudo systemctl status redis-server
+```
+
+## 安装nvm
+```shell
+curl -o- https://raw.githubusercontent.com/nvm-sh/nvm/v0.35.3/install.sh | bash
+
+nvm install node16
+
+npm install pnpm -g
+
+pnpm install -P
+```
+
+## 安装浏览器内核
+里面有用到puppeteer 需要浏览器支持
+```shell
+sudo apt update && sudo apt install chromium-browser
+```
+
+## 克隆仓库
+克隆仓库 然后进入仓库
+
+## 克隆插件
+```shell
+git clone https://gitee.com/yoimiya-kokomi/miao-plugin.git ./plugins/miao-plugin/
+
+pnpm add image-size -w
+
+git clone https://gitee.com/Ctrlcvs/xiaoyao-cvs-plugin.git ./plugins/xiaoyao-cvs-plugin/
+```
+
+## 安装字体
+Ubuntu默认没有中文，我用的得意黑，但是有点怪怪的。
+
+在github下载压缩包，直接把ttf文件拖拽到浏览器中，直接会上传，然后输入以下命令：
+```shell
+sudo apt-get -y install fontconfig xfonts-utils
+
+cp 你的文件名.ttf /usr/share/fonts/
+
+cd /usr/share/fonts/
+
+mkfontscale
+
+mkfontdir
+
+fc-cache
+
+# 查询安装的中文字体命令
+fc-list :lang=zh
+```
+
+
+
+
+
+
+
+
+
