--- a/source/_posts/23021301.md
+++ b/source/_posts/23021301.md
@@ -16,7 +16,22 @@ tags:
 
 一般情况下，行内元素只能包含数据和其他行内元素。 而块级元素可以包含行内元素和其他块级元素。这种结构上的包含继承区别可以使块级元素创建比行内元素更”大型“的结构。
 
+## 常见的元素
+1. 常见的块级元素有 h1~h6、p、div等，其中div标签是最典型的块元素。
+2. 常见的行内元素有a、i、span等，其中span标签最典型的行内元素。有的地方也成内联元素
+3. 在行内元素中有几个特殊的标签——img、input，可以对它们设置宽高和对齐属性，有些资料可能会称它们为行内块元素。
 
+## 相互转换
+属性名叫display，值为block时代表块级元素；值为inline时代表行内元素，因此我们可以把div从块级元素改成行内元素。
+```css
+div {
+  display: inline;
+}
+```
+
+display还有额外的两个值：
+- inline-block：行内块元素。
+- none：隐藏元素。
 
 
 
