--- a/source/_posts/23021501.md
+++ b/source/_posts/23021501.md
@@ -9,6 +9,197 @@ tags:
 - css
 ---
 
+## 盒模型
+盒模型有两种， IE 怪异盒子模型`box-sizing: border-box;`、W3C 标准盒子模型`box-sizing: content-box;`；
 
+盒模型是由： 内容(content)、内边距(padding)、边框(border)、外边距(margin) 组成的。
+
+标准模型的宽高是指的 content 区宽高； IE 盒模型的宽高是指的 content+padding+border 的宽高。
+
+
+## BFC
+W3C 对 BFC 定义：
+> 浮动元素和绝对定位元素，非块级盒子的块级容器（例如 inline-blocks, table-cells, 和 table-captions），以及 overflow 值不为“visiable”的块级盒子，都会为他们的内容创建新的 BFC（块级格式上下文）。
+
+BFC(Block formatting context)直译为"块级格式化上下文"。它是一个独立的渲染区域，只有 Block-level box 参与， 它规定了内部的 Block-level Box 如何布局，并且与这个区域外部毫不相干。
+
+### BFC 作用：
+- 利用 BFC 避免外边距折叠
+- 清除内部浮动 （撑开高度），原理: 触发父 div 的 BFC 属性，使下面的子 div 都处在父 div 的同一个 BFC 区域之内
+- 避免文字环绕
+- 分属于不同的 BFC 时，可以阻止 margin 重叠
+- 多列布局中使用 BFC
+
+### 如何生成 BFC：（脱离文档流，满足下列的任意一个或多个条件即可）
+- 根元素，即 HTML 元素（最大的一个 BFC）
+- float 的值不为 none
+- position 的值为 absolute 或 fixed
+- overflow 的值不为 visible（默认值。内容不会被修剪，会呈现在元素框之外）
+- display 的值为 inline-block、table-cell、table-caption
+
+### BFC 布局规则：
+- 内部的 Box 会在垂直方向，一个接一个地放置。
+- 属于同一个 BFC 的两个相邻的 Box 的 margin 会发生重叠
+- BFC 就是页面上的一个隔离的独立容器，容器里面的子元素不会影响到外面的元素。反之也如此, 文字环绕效果，设置 float
+- BFC 的区域不会与 float box 重叠。
+- 计算 BFC 的高度，浮动元素也参与计算
+
+## float
+- 元素"浮动"
+- 脱离文档流
+- 不脱离文本流
+- 位置尽量靠上，并靠左或右
+
+对自己的影响
+- 形成"块"(BFC)
+- 这个块会负责自己的布局，宽高由自己决定，比如 span 中用 float 这个 span 就形成了一个 BFC，就可以设置宽高了
+
+对兄弟元素的影响
+- 上面一般贴非 float 元素
+- 靠边贴 float 元素或边
+- 不影响其他块级元素位置
+- 影响其他块级元素文本
+
+对父级元素的影响
+- 从布局上"消失"
+- 高度塌陷
+
+## 清除浮动
+清楚浮动
+浮动的元素布局时不会占据父元素的布局空间，即父元素布局时不会管浮动元素，浮动元素有可能超出父元素，从而对其他元素造成影响。
+
+方法一：让父元素变为一个 BFC。 父元素 overflow: auto/hidden。 让父元素去关注里面的高度。 必须定义 width 或 zoom:1，同时不能定义 height，使用 overflow:auto 时，浏览器会自动检查浮动区域的高度
+
+方法二： 使用伪元素清楚浮动
+```css
+.container::after {
+  content: " ";
+  clear: both;
+  display: block;
+  visibility: hidden;
+  height: 0;
+}
+```
+
+## inline-block 的间隙
+两个并列的 inline-block 中间会有一条裂缝，这个的原因是两个标签之间有空格，浏览器把这些空格当成文字中空格，所以这两个块中间多少有间隙。
+
+解决办法：
+- 删除两个标签间的空格，但是这样 html 排版不好
+- 容器元素 font-size: 0 然后再在里面再重新设置字体大小
+
+## 你对 line-height 是如何理解的？
+- line-height 指一行字的高度，包含了字间距，实际上是下一行基线到上一行基线距离
+- 如果一个标签没有定义 height 属性，那么其最终表现的高度是由 line-height 决定的
+- 一个容器没有设置高度，那么撑开容器高度的是 line-height 而不是容器内的文字内容
+- 把 line-height 值设置为 height 一样大小的值可以实现单行文字的垂直居中
+- line-height 和 height 都能撑开一个高度，height 会触发 haslayout（一个低版本 IE 的东西），而 line-height 不会
+
+## line-height 三种赋值方式有何区别？（带单位、纯数字、百分比）
+- 带单位：px 是固定值，而 em 会参考父元素 font-size 值计算自身的行高
+- 纯数字：会把比例传递给后代。例如，父级行高为 1.5，子元素字体为 18px，则子元素行高为 1.5 * 18 = 27px
+- 百分比：将计算后的值传递给后代
+
+## 图片下面有一个缝隙是因为什么
+因为 img 也相当于一个 inline 的元素， inline 就要遵守行高的构成，它会按照 base 基线对齐，基线对齐的话那么它就会和底线间有一个缝隙。
+
+如何解决： 因为它会遵守文字对齐方案，那么就把图片的对齐方式修改为 vertical-align: bottom。或者让他display: block，这样图片虽然会换行，但是没有间隙了。
+
+## 单行文本溢出显示省略号
+```css
+overflow: hidden;
+text-overflow: ellipsis;
+white-space: no-wrap;
+```
+
+## 多行文本溢出显示省略号
+```css
+overflow: hidden;
+text-overflow: ellipsis;
+display: -webkit-box;
+-webkit-line-clamp: 3;
+-webkit-box-orient: vertical;
+```
+
+## display: none; 与 visibility: hidden; 的区别
+### 结构：
+- display:none
+  会让元素完全从渲染树中消失，渲染的时候不占据任何空间, 不能点击，
+- visibility: hidden
+  不会让元素从渲染树消失，渲染元素继续占据空间，只是内容不可见，不能点击
+- opacity: 0
+  不会让元素从渲染树消失，渲染元素继续占据空间，只是内容不可见，可以点击
+
+### 继承
+- display: none 和 opacity: 0
+  非继承属性，子孙节点消失由于元素从渲染树消失造成，通过修改子孙节点属性无法显示。
+- visibility: hidden
+  继承属性，子孙节点消失由于继承了 hidden，通过设置 visibility: visible;可以让子孙节点显式。
+
+### 性能
+- display:none
+  修改元素会造成文档回流。读屏器不会读取 display: none 元素内容，性能消耗较大
+- visibility:hidden
+  修改元素只会造成本元素的重绘,性能消耗较少。读屏器读取 visibility: hidden 元素内容
+- opacity: 0
+  修改元素会造成重绘，性能消耗较少
+
+相同点： 它们都能让元素不可见、他们都依然可以被 JS 所获取到
+
+## 外边距折叠(collapsing margins)
+相邻的两个盒子（可能是兄弟关系也可能是祖先关系）的外边距可以结合成一个单独的外边距。 这种合并外边距的方式被称为折叠，结合而成的外边距称为折叠外边距
+
+折叠结果遵循下列计算规则：
+- 两个相邻的外边距都是正数时，折叠结果是它们两者之间较大的值
+- 两个相邻的外边距都是负数时，折叠结果是两者绝对值的较大值
+- 两个外边距一正一负时，折叠结果是两者的相加的和
+
+## CSS 单位
+1. px 绝对单位。传统上一个像素对应于计算机屏幕上的一个点，而对于高清屏则对应更多。
+2. % 父元素宽度的比例。
+  - 如果对 html 元素设置 font-size 为百分比值，则是以浏览器默认的字体大小 16px 为参照计算的（所有浏览器的默认字体大小都为 16px），如 62.5%即等于 10px（62.5% * 16px = 10px）。
+3. em 相对单位。 不同的属性有不同的参照值。
+  - 对于字体大小属性（font-size）来说，em 的计算方式是相对于父元素的字体大小
+  - border, width, height, padding, margin, line-height）在这些属性中，使用 em 单位的计算方式是参照该元素的 font-size，1em 等于该元素设置的字体大小。同理如果该元素没有设置，则一直向父级元素查找，直到找到，如果都没有设置大小，则使用浏览器默认的字体大小。
+4. rem 是相对于根元素 html 的 font-size 来计算的，所以其参照物是固定的。
+  好处：rem 只需要修改 html 的 font-size 值即可达到全部的修改，即所谓的牵一发而动全身。
+5. vw, vh, vmin, vmax 相对单位，是基于视窗大小（浏览器用来显示内容的区域大小）来计算的。
+  - vw：基于视窗的宽度计算，1vw 等于视窗宽度的百分之一
+  - vh：基于视窗的高度计算，1vh 等于视窗高度的百分之一
+  - vmin：基于 vw 和 vh 中的最小值来计算，1vmin 等于最小值的百分之一
+  - vmax：基于 vw 和 vh 中的最大值来计算，1vmax 等于最大值的百分之一
+
+## CSS 优化、提高性能的方法有哪些？
+- 多个 css 合并，尽量减少 HTTP 请求
+- css 雪碧图
+- 抽象提取公共样式，减少代码量
+- 选择器优化嵌套，尽量避免层级过深 （用‘>’替换‘ ’）
+- 属性值为 0 时，不加单位
+- 压缩 CSS 代码
+- 避免使用expression表达式
+
+## link 与 @import 的区别
+- link 是 HTML 方式， @import 是 CSS 方式
+- link 最大限度支持并行下载，@import 过多嵌套导致串行下载
+- link 可以通过 rel="alternate stylesheet" 指定候选样式
+- 浏览器对 link 支持早于@import ，可以使用 @import 对老浏览器隐藏样式
+- @import 必须在样式规则之前，可以在 css 文件中引用其他文件
+- 总体来说：link 优于@import
+
+## display 有哪些值？说明他们的作用
+- block 像块类型元素一样显示。
+- none 将元素的显示设为无，即在网页中不占任何的位置。
+- inline 内联元素，元素前后没有换行符。
+- inline-block 象行内元素一样定位，但其内容象块类型元素一样显示。
+- list-item 象块类型元素一样显示，并添加样式列表标记。
+- table 此元素会作为块级表格来显示
+- inherit 规定应该从父元素继承 display 属性的值
+
+## position 有哪些值？ relative 和 absolute 定位原点是？
+- absolute 生成绝对定位的元素，相对于值不为 static 的第一个父元素进行定位。
+- fixed （老 IE 不支持） 生成绝对定位的元素，相对于浏览器窗口进行定位。
+- relative 生成相对定位的元素，相对于其正常位置进行定位。
+- static 默认值。没有定位，元素出现在正常的流中（忽略 top, bottom, left, right - z-index 声明）。
+- inherit 规定从父元素继承 position 属性的值
 
 
