--- a/source/_posts/23021501.md
+++ b/source/_posts/23021501.md
@@ -202,4 +202,150 @@ display: -webkit-box;
 - static 默认值。没有定位，元素出现在正常的流中（忽略 top, bottom, left, right - z-index 声明）。
 - inherit 规定从父元素继承 position 属性的值
 
+## 如何水平居中一个元素？
+如果需要居中的元素为 inline 或 inline-block，为父元素设置 text-align: center;即可实现
 
+如果要居中的元素为一个块级元素的话，一般使用 margin: 0 auto; 进行居中。
+
+## 用纯 CSS 创建一个三角形的原理是什么？
+把 border 的其他三条边设为透明 注意，这里要把 border-width 、border-style、 border-color 分开写。
+```css
+.tri {
+  width: 0px;
+  height: 0;
+  border-style: solid;
+  border-width: 100px;
+  border-color: transparent transparent red transparent;
+}
+```
+
+## li 与 li 之间有看不见的空白间隔是什么原因引起的？有什么解决办法？(也称幽灵字符)
+行框的排列会受到中间空白（回车\空格）等的影响，因为空格也属于字符, 这些空白也会被应用样式，占据空间，所以会有间隔，把字符大小设为 0，就没有空格了
+
+## display:inline-block 什么时候会显示间隙？
+- 相邻的 inline-block 元素之间有换行或空格分隔的情况下会产生间距
+- 非 inline-block 水平元素设置为 inline-block 也会有水平间距
+- 可以借助 vertical-align:top; 消除垂直间隙
+- 可以在父级加 font-size：0; 在子元素里设置需要的字体大小，消除垂直间隙
+- 把 li 标签写到同一行可以消除垂直间隙，但代码可读性差
+
+## 什么是响应式设计？响应式设计的基本原理是什么？如何兼容低版本的 IE？
+- 响应式设计就是网站能够兼容多个不同大小的终端，而不是为每个终端做一个特定的版本
+- 基本原理是利用 CSS3 媒体查询，为不同尺寸的设备适配不同样式
+- 对于低版本的 IE，可采用 JS 获取屏幕宽度，然后通过监听 window.onresize 方法来实现兼容
+
+## 谈谈浮动和清除浮动
+浮动的框可以向左或向右移动，直到他的外边缘碰到包含框或另一个浮动框的边框为止。 浮动框脱离文档流，所以文档的普通流的块框表现得就像浮动框不存在一样。浮动的块框会漂浮在文档普通流的块框上。
+
+清除方法：
+1. 父级 div 定义伪类：after 和 zoom (推荐使用，建议定义公共类，以减少 CSS 代码)
+```css
+.clearfloat:after {
+  display: block;
+  clear: both;
+  content: "";
+  visibility: hidden;
+  height: 0;
+}
+
+.clearfloat {
+  zoom: 1;
+}
+```
+2. 在结尾处添加空 div 标签 clear:both
+```html
+<div class="parent">
+  <div class="left">Left</div>
+  <div class="right">Right</div>
+  <div class="clearfloat"></div>
+</div>
+
+<style>
+  .left {
+    float: left;
+  }
+  .clearfloat {
+    clear: both;
+  }
+</style>
+```
+
+父级 div 定义 overflow:auto。 同时需要父级指定宽度
+
+## 请列举几种隐藏元素的方法
+- `visibility: hidden;` 这个属性只是简单的隐藏某个元素，但是元素占用的空间任然存在
+- `opacity: 0;` CSS3 属性，设置 0 可以使一个元素完全透明
+- `position: absolute;` 设置一个很大的 left 负值定位，使元素定位在可见区域之外
+- `display: none;` 元素会变得不可见，并且不会再占用文档的空间。
+- `transform: scale(0);` 将一个元素设置为缩放无限小，元素将不可见，元素原来所在的位置将被保留
+- `<div hidden="hidden">` HTML5 属性,效果和 `display:none;`相同，但这个属性用于记录一个元素的状态
+- `height: 0;` 将元素高度设为 0 ，并消除边框
+- `filter: blur(0);` CSS3 属性，将一个元素的模糊度设置为 0
+
+## rgba() 和 opacity 的透明效果有什么不同？
+opacity 作用于元素以及元素内的所有内容（包括文字）的透明度
+rgba() 只作用于元素自身的颜色或其背景色，子元素不会继承透明效果
+
+## css 属性 content 有什么作用？
+content 属性专门应用在 before/after 伪元素上，用于插入额外内容或样式
+
+## a 标签上四个伪类的使用顺序是怎么样的？
+link > visited > hover > active 简称 lvha(love-ha)
+
+伪类的特殊性（应用优先级）是同样的，所以后出现的伪类会覆盖先出现的伪类（同时激活）
+
+在这里，比如把 hover 放在 active 后面，那么实际你在激活（active）链接的时候就触发了 hover 伪类，hover 在后面覆盖了 active 的颜色，所以始终无法看到 active 的颜色
+
+## 伪元素和伪类的区别和作用？
+伪元素:在内容元素的前后插入额外的元素或样式，但是这些元素实际上并不在文档中生成。它们只在外部显示可见，但不会在文档的源代码中找到它们，因此，称为“伪”元素。例如：
+```css
+p::before {
+  content: "第一章：";
+}
+p::after {
+  content: "Hot!";
+}
+p::first-line {
+  background: red;
+}
+p::first-letter {
+  font-size: 30px;
+}
+```
+
+伪类: 将特殊的效果添加到特定选择器上。它是已有元素上添加类别的，不会产生新的元素。例如：
+```css
+a:hover {
+  color: #ff00ff;
+}
+p:first-child {
+  color: red;
+}
+```
+
+## ::before 和 :after 中双冒号和单冒号有什么区别？
+在 CSS 中伪类一直用 : 表示，如 :hover, :active 等，伪元素在 CSS1 中已存在，当时语法是用 : 表示，如 :before 和 :after；后来在 CSS3 中修订，伪元素用 :: 表示，如 ::before 和 ::after，以此区分伪元素和伪类，由于低版本 IE 对双冒号不兼容，开发者为了兼容性各浏览器，继续使使用 :after 这种老语法表示伪元素。综上所述：::before 是 CSS3 中写伪元素的新语法； :after 是 CSS1 中存在的、兼容 IE 的老语法
+
+## 设置元素浮动后，该元素的 display 值会如何变化？
+设置元素浮动后，该元素的 display 值自动变成 block
+
+## 请解释 CSS sprites，以及你要如何在页面或网站中实现它
+CSS Sprites 其实就是把网页中一些背景图片整合到一张图片文件中，再利用 CSS 的“background-image”，“background- repeat”，“background-position”的组合进行背景定位，background-position 可以用数字能精确的定位出背景图片的位置。
+CSS Sprites 为一些大型的网站节约了带宽，让提高了用户的加载速度和用户体验，不需要加载更多的图片。
+
+## base64 的使用
+- 写入 CSS， 减少 HTTP 请求
+- 适用于小图片
+- base64 的体积约为原图 4/3
+
+## margin 叠加几种情况
+margin 叠加的意思是：当两个或者更多的垂直外边距 相遇时，它们将形成一个外边距，这个外边距的高度等于两个发生叠加的外边距中高度较大者。
+1. 当一个元素出现在另一个元素上面时，第一个元素的底边外边距与第二个元素的顶边外边距发生叠加。
+2. 当一个元素在另一个元素中时，它们的顶边距和低边距也会发生叠加
+3. 如果一个元素是空元素（即一个元素没有内容，内边距和边框），这种情况外边距的顶边距和低边距碰在一起也会发生叠加
+4. 在上面那种空元素的情况，如果该空元素与另一个元素的外边距碰在一起，也会发生叠加。
+
+
+
+
+  
