--- a/source/_posts/23021501.md
+++ b/source/_posts/23021501.md
@@ -345,7 +345,44 @@ margin 叠加的意思是：当两个或者更多的垂直外边距 相遇时，
 3. 如果一个元素是空元素（即一个元素没有内容，内边距和边框），这种情况外边距的顶边距和低边距碰在一起也会发生叠加
 4. 在上面那种空元素的情况，如果该空元素与另一个元素的外边距碰在一起，也会发生叠加。
 
+## 为什么要初始化 CSS 样式？
+- 不同浏览器对有些标签样式的默认值解析不同
+- 不初始化 CSS 会造成各现浏览器之间的页面显示差异
+- 可以使用 reset.css 或 Normalize.css 做 CSS 初始化
 
+## 什么是 FOUC(Flash of Unstyled Content)？ 如何来避免 FOUC？
+当使用 @import 导入 CSS 时，会导致某些页面在 IE 出现奇怪的现象： 没有样式的页面内容显示瞬间闪烁，这种现象称为“文档样式短暂失效”，简称为 FOUC
+- 产生原因：当样式表晚于结构性 html 加载时，加载到此样式表时，页面将停止之前的渲染。等待此样式表被下载和解析后，再重新渲染页面，期间导致短暂的花屏现象。
+- 解决方法：使用 link 标签将样式表放在文档 head
 
+## 抽离样式模块怎么写
+CSS 可以拆分成 2 部分：公共 CSS 和 业务 CSS：
+- 网站的配色，字体，交互提取出为公共 CSS。这部分 CSS 命名不应涉及具体的业务
+- 对于业务 CSS，需要有统一的命名，使用公用的前缀。可以参考面向对象的 CSS
 
-  
+## 什么是视差滚动效果，如何给每页做不同的动画？
+视差滚动是指多层背景以不同的速度移动，形成立体的运动效果，具有非常出色的视觉体验
+一般把网页解剖为：背景层、内容层和悬浮层。当滚动鼠标滚轮时，各图层以不同速度移动，形成视差的
+实现原理
+- 以 “页面滚动条” 作为 “视差动画进度条”
+- 以 “滚轮刻度” 当作 “动画帧度” 去播放动画的
+- 监听 mousewheel 事件，事件被触发即播放动画，实现“翻页”效果
+
+## 请问为何要使用 transform 而非 absolute positioning
+使用 transform 或 position 实现动画效果时是有很大差别。
+- 使用 transform 时，可以让 GPU 参与运算，动画的 FPS 更高。
+- 使用 position 时，最小的动画变化的单位是 1px，而使用 transform 参与时，可以做到更小（动画效果更加平滑）
+- 功能都一样。但是 translate 不会引起浏览器的重绘和重排。
+
+但是同时是有缺点的：
+- transform 改变 fixed 子元素的定位对象
+- transform 改变元素层叠顺序
+
+## 如果需要手动写动画，你认为最小时间间隔是多久？
+多数显示器的默认频率是60HZ，即每秒刷新60次。所以理论上的最小间隔是 1 / 60 * 1000ms = 16.7ms
+
+## 如何修改 Chrome 记住密码后自动填充表单的黄色背景？
+产生原因：由于 Chrome 默认会给自动填充的 input 表单加上 input:-webkit-autofill 私有属性造成的
+- 解决方案 1：在 form 标签上直接关闭了表单的自动填充：autocomplete="off"
+- 解决方案 2：input:-webkit-autofill { background-color: transparent; }
+
