--- a/source/_posts/23021001.md
+++ b/source/_posts/23021001.md
@@ -19,7 +19,25 @@ tags:
 [css类面试题](https://shuangxunian.github.io/2023/02/15/23021501/)
 
 ## JS
+[BOM]()
+[DOM]()
+[ES6]()
+[ServiceWorker]()
+[node事件轮询]()
+[this]()
+[事件]()
+[事件轮询机制]()
+[事件队列]()
+[作用域]()
+[全局内置对象]()
+[函数]()
+[原型链与继承]()
+[垃圾回收与内存泄漏和优化]()
+[正则]()
+[类型转换]()
+[运算符]()
 [js类面试题](https://shuangxunian.github.io/2023/02/15/23021502/)
+
 
 ## NodeJS
 [node类面试题](https://shuangxunian.github.io/2023/02/15/23021503/)
