--- a/source/_posts/23022401.md
+++ b/source/_posts/23022401.md
@@ -17,5 +17,7 @@ tags:
 我并不是在贩卖焦虑，因为我不卖课，贩卖焦虑并不能让我赚到什么钱，我说上边的这些只是劝退一些对于前端抱有幻想、认为随便学学就可以月薪过万的人；如果你喜欢前端，并想把它变成你的工作，你要做的就是不要焦虑，按照技术栈一步步的学下去；如果你遇到了什么问题，要学会善用互联网搜索引擎，学习遇到的问题100%可以通过搜索解决。你只需要知道，你今天每学的一点知识就可以帮你淘汰很多人就行了。
 
 ## 不要信一些视频
+第三点，不要偏信任何视频，包括我的，自己长点心，遇到别人说的各种情况多上网搜一搜，看看其他人怎么说，然后自己总结沉淀；尤其是现在有很多视频，取名为前端大佬这那，然后视频清一色面试各个同学，疯狂贩卖焦虑，说各种不行，但是来我这培训的就很行，不要上当！
 
+还有就是明明工作好些年然后装新人，去应聘各种小公司的实习岗，或者初级开发岗，也不入职，就为了流量拍视频；这种人是更损人不利己的；首先耽误了面试官的时间，面试官也是打工人，收到hr给的简历后又要花时间去看你的简历，花时间准备面试题，然后花时间面试你，其次是hr，hr收到面试官的反馈结果然后与你沟通你又不来，hr也耽误了时间；其次是真正想要这个岗位的同学，明明认真准备了，而且面试过程中也很努力，结果也不错，但是因为你的搅局可能会耽误他的入职；你面试的时候只满足了自己
 
