--- a/source/_posts/22110603.md
+++ b/source/_posts/22110603.md
@@ -19,6 +19,7 @@ tags:
 [关于markdown的基础语法](https://shuangxunian.github.io/2022/12/29/22122901/)
 [学前准备](https://shuangxunian.github.io/2022/12/02/22120201/)
 [vscode准备](https://shuangxunian.github.io/2022/12/02/22120202/)
+[自己的哔哔赖赖](https://shuangxunian.github.io/2023/02/24/23022401/)
 
 ## html
 [html页面架构](https://shuangxunian.github.io/2023/01/29/23012901/)
