--- a/source/_posts/23021001.md
+++ b/source/_posts/23021001.md
@@ -19,8 +19,7 @@ tags:
 [css类面试题](https://shuangxunian.github.io/2023/02/15/23021501/)
 
 ## JS
-[BOM]()
-[DOM]()
+[BOM，DOM](https://shuangxunian.github.io/2023/03/10/23031000/)
 [ES6]()
 [ServiceWorker]()
 [node事件轮询]()
