--- a/source/_posts/23020902.md
+++ b/source/_posts/23020902.md
@@ -2,7 +2,7 @@
 title: 层叠与继承
 excerpt: 本文旨在让你理解 CSS 的一些最基本的概念——层叠、优先级和继承
 date: 2023-02-09
-categories: 层叠，继承，优先级
+categories:
 - 技术文章
 tags:
 - css
