--- a/source/_posts/23021502.md
+++ b/source/_posts/23021502.md
@@ -387,4 +387,11 @@ fn2();
 ## 多个 this 规则出现时，this 最终指向哪里？
 首先，new 的方式优先级最高，接下来是 bind 这些函数，然后是 obj.foo() 这种调用方式，最后是 foo 这种调用方式，同时，箭头函数的 this 一旦被绑定，就不会再被任何方式所改变。
 
+## 事件循环
+[彻底搞懂JavaScript事件循环](https://juejin.cn/post/6992167223523541023)
+
+## 变量提升
+[彻底解决 JS 变量提升的面试题 | 一题一图，超详细包教包会](https://segmentfault.com/a/1190000039288278)
+
+
 
