--- a/source/_posts/23033100.md
+++ b/source/_posts/23033100.md
@@ -1,4 +1,15 @@
-现在有这么个需求，在Ubuntu 18中跑个paddleNLP，这个很容易出各种问题，记录一下踩的雷。
+---
+title: paddleNLP在Ubuntu18中的实现
+excerpt: 现在有这么个需求，在Ubuntu 18中跑个paddleNLP，这个很容易出各种问题，记录一下踩的雷。
+date: 2023-03-31
+categories:
+- 技术文章
+tags:
+- python
+- Ubuntu
+- nlp
+---
+
 
 ## 安装py
 
@@ -128,7 +139,10 @@ kill -9 9208
 
 意思为强制结束（kill）进程号为9208的进程。-9表示使用SIGKILL信号强制结束进程。
 
-
+## 参考链接
+[如何在Ubuntu 18.04安装Python 3.7](https://www.myfreax.com/how-to-install-python-3-7-on-ubuntu-18-04/)
+[ModuleNotFoundError: No module named '_lzma'](https://zhuanlan.zhihu.com/p/404162713)
+[在Ubuntu下后台持续运行Python程序](https://blog.csdn.net/mrbcy/article/details/64533496)
 
 
 
