--- a/source/_posts/23033100.md
+++ b/source/_posts/23033100.md
@@ -90,7 +90,7 @@ python3.8 main.py
 然后先运行起来，看看缺什么依赖，再补充，我这里会显示缺`_lzma`：
 ```cmd
 apt-get install liblzma-dev -y
-pip install backports.lzma
+pip3.8 install backports.lzma
 # 根据提示路径找到lzma.py，然后做以下修改
 # 修改前
 from _lzma import *
@@ -110,7 +110,7 @@ except ImportError:
 ## 后台执行
 ### 挂起
 ```cmd
-nohup python -u main.py > test.out 2>&1 &
+nohup python3.8 -u main.py > test.out 2>&1 &
 # 其中 0、1、2分别代表如下含义：
 #  0 – stdin (standard input)
 #  1 – stdout (standard output)
@@ -138,6 +138,9 @@ kill -9 9208
 ```
 
 意思为强制结束（kill）进程号为9208的进程。-9表示使用SIGKILL信号强制结束进程。
+
+## 注意
+如果你用的是别的版本的，对应的pip和python也要换成你的版本，如你的py是3.7，那么对应的指令要换成python3.7和pip3.7。
 
 ## 参考链接
 [如何在Ubuntu 18.04安装Python 3.7](https://www.myfreax.com/how-to-install-python-3-7-on-ubuntu-18-04/)
