--- a/source/_posts/23033100.md
+++ b/source/_posts/23033100.md
@@ -91,6 +91,8 @@ python3.8 main.py
 ```cmd
 apt-get install liblzma-dev -y
 pip3.8 install backports.lzma
+```
+```python
 # 根据提示路径找到lzma.py，然后做以下修改
 # 修改前
 from _lzma import *
