--- a/source/_posts/23033101.md
+++ b/source/_posts/23033101.md
@@ -1,7 +1,13 @@
-nvm与pm2
-
-两个比较简单但无关联的东西，只是写在一起图个方便
-
+---
+title: nvm与pm2
+excerpt: 两个比较简单但无关联的东西，只是写在一起图个方便。
+date: 2023-03-31
+categories:
+- 技术文章
+tags:
+- pm2
+- nvm
+---
 ## nvm
 当程序很多时，有新创建的有旧的好多年的，不同项目必须依赖不同版的 NodeJS 运行环境，我们不可能每换一个项目卸载重装node，所以我们需要一个能管理node版本的软件，即：nvm。
 
@@ -48,6 +54,35 @@ nvm use node
 ```
 
 ## pm2
+当我们需要一直启动一个服务的时候，比如说一个服务端，亦或一个实时接收信息并处理的机器人，我们可以通过 node 直接启动服务，但对于线上项目，如果直接通过 node app 来启动，因为 node 是单线程的，所以如果报错了可能会使项目直接停止，从而导致整个服务崩溃；亦或用云服务器，直接 node 启动后关闭标签页，项目是会直接退出的。因此我们需要新的管理工具：PM2。PM2是 node 进程管理工具，可以利用它来简化很多node应用管理的繁琐任务。
+
+### 安装
+```
+npm install -g pm2
+```
+
+### 使用
+```
+# 启动
+pm2 start app.js
+
+# 显示所有进程信息；
+pm2 list
+
+# 重启所有进程
+pm2 restart all
+
+# 停止/删除所有进程
+pm2 stop/delete all
+
+# 显示所有进程的日志
+pm2 logs
+
+# 杀进程
+pm2 kill
+```
+
+
 
 
 
