--- a/source/_posts/23021502.md
+++ b/source/_posts/23021502.md
@@ -393,5 +393,89 @@ fn2();
 ## 变量提升
 [彻底解决 JS 变量提升的面试题 | 一题一图，超详细包教包会](https://segmentfault.com/a/1190000039288278)
 
+## 创建对象的方法
+```javascript
+var o1 = { name: "value" };
+var o2 = new Object({ name: "value" });
 
+var M = function () {
+  this.name = "o3";
+};
+var o3 = new M();
 
+var P = { name: "o4" };
+var o4 = Object.create(P);
+```
+
+## 原型
+- JavaScript 的所有对象中都包含了一个 `__proto__` 内部属性，这个属性所对应的就是该对象的原型
+- JavaScript 的函数对象，除了原型 `__proto__` 之外，还预置了 prototype 属性
+- 当函数对象作为构造函数创建实例时，该 prototype 属性值将被作为实例对象的原型 `__proto__`。
+
+## 原型链
+任何一个实例对象通过原型链可以找到它对应的原型对象，原型对象上面的实例和方法都是实例所共享的。
+
+一个对象在查找以一个方法或属性时，他会先在自己的对象上去找，找不到时，他会沿着原型链依次向上查找。
+
+注意： 函数才有 prototype，实例对象只有`__proto__`， 而函数有的`__proto__`是因为函数是 Function 的实例对象
+
+## instanceof 原理
+
+判断实例对象的`__proto__`属性与构造函数的 prototype 是不是用一个引用。如果不是，他会沿着对象的`__proto__`向上查找的，直到顶端 Object。
+
+## 判断对象是哪个类的直接实例
+
+使用`对象.construcor`直接可判断
+
+## 构造函数，new 时发生了什么？
+```javascript
+var obj = {};
+obj.__proto__ = Base.prototype;
+Base.call(obj);
+```
+
+1. 创建一个新的对象 obj;
+2. 将这个空对象的`__proto__`成员指向了 Base 函数对象 prototype 成员对象
+3. Base 函数对象的 this 指针替换成 obj, 相当于执行了 Base.call(obj);
+4. 如果构造函数显示的返回一个对象，那么则这个实例为这个返回的对象。 否则返回这个新创建的对象
+
+## 类
+```javascript
+// 普通写法
+function Animal() {
+  this.name = "name";
+}
+
+// ES6
+class Animal2 {
+  constructor() {
+    this.name = "name";
+  }
+}
+```
+
+## 继承
+在构造函数中 使用`Parent.call(this)`的方法继承父类属性。
+
+原理： 将子类的 this 使用父类的构造函数跑一遍
+
+缺点： Parent 原型链上的属性和方法并不会被子类继承
+
+```javascript
+function Parent() {
+  this.name = "parent";
+}
+
+function Child() {
+  Parent.call(this);
+  this.type = "child";
+}
+```
+
+### ES5/ES6 的继承除了写法以外还有什么区别？
+- class 声明会提升，但不会初始化赋值。Foo 进入暂时性死区，类似于 let、const 声明变量。
+- class 声明内部会启用严格模式。
+- class 的所有方法（包括静态方法和实例方法）都是不可枚举的。
+- class 的所有方法（包括静态方法和实例方法）都没有原型对象 prototype，所以也没有 construct，不能使用 new 来调用。
+- 必须使用 new 调用 class。
+- class 内部无法重写类名。
