--- a/source/_posts/23041700.md
+++ b/source/_posts/23041700.md
@@ -29,6 +29,23 @@ npm i express
 npm i mysql
 ```
 
+```javascript
+var express = require("express"); //引用外部模块接口，也就是获取模块对象
+var router = express.Router();//创建路由实例
+//调用mysql模块
+const mysql = require("mysql");
+//配置本机mysql连接基本信息
+let connectInfo = mysql.createConnection({
+	host: '',                   // 刚刚在腾讯云开的外网，此链接一定不能让其他人看到
+	port: 29905,
+	user: '',                   // 刚刚在腾讯云设置的用户名，记住不要泄露
+	password: '',               // 刚刚在腾讯云设置的密码，记住不要泄露
+	database: ''                // 刚刚在腾讯云创建的数据库
+})
+//数据库建立连接
+connectInfo.connect();
+```
+
 
 
 
