--- a/source/_posts/23041700.md
+++ b/source/_posts/23041700.md
@@ -44,8 +44,76 @@ let connectInfo = mysql.createConnection({
 })
 //数据库建立连接
 connectInfo.connect();
+
+// 增删改查
+
+// 关闭数据库
+connection.end();
+```
+一般泄露的情况会出现在上传到github的这个过程中，在把代码推到公开仓库时一定要注意！
+
+
+## 增
+```javascript
+const sql = 'INSERT INTO `test1` (`id`, `name`, `add`) VALUES (?,?,?);'
+const data = [5, 'name5', 'add5']
+
+connectInfo.query(sql, data, (error, result, fields) => {
+  if (error) {
+		console.log('[query]-:' + error)
+	} else {
+		console.log(result);
+	}
+});
 ```
 
+## 删
+```javascript
+const sql = 'delete from test1  where id= ?'
+const data = 5
+
+connectInfo.query(sql, data, (error, result, fields) => {
+	if (error) {
+		console.log('[query]-:' + error)
+	} else {
+		console.log(result)
+	}
+})
+```
+
+## 改
+```javascript
+const sql = 'update `test1` set  `name`= ? , `add`= ? where `id`= ?'
+const data = ['name5new', 'add5new', 5]
+
+connectInfo.query(sql, data, (error, result, fields) => {
+	if (error) {
+		console.log('[query]-:' + error)
+	} else {
+		console.log(result)
+	}
+})
+
+```
+
+## 查
+```javascript
+const sql = 'select * from `test1` where `name`= ? and `id`= ?'
+const data = ['name5', 5]
+
+connectInfo.query(sql, data, (error, result, fields) => {
+	if (error) {
+		console.log('[query]-:' + error)
+	} else {
+		console.log(result)
+	}
+})
+```
+
+## code
+
+
+## 参考链接
 
 
 
