--- a/source/_posts/23041700.md
+++ b/source/_posts/23041700.md
@@ -111,10 +111,11 @@ connectInfo.query(sql, data, (error, result, fields) => {
 ```
 
 ## code
-
+[code](https://github.com/shuangxunian/teaching-FE/tree/main/0/express_mysql_demo)
 
 ## 参考链接
-
+[node + express + mysql实现简单的增删查改](https://juejin.cn/post/6975750260530675726)
+[Node.js+Express+Mysql 实现增删改查](https://juejin.cn/post/6844903811606134792)
 
 
 
