--- a/source/_posts/23041700.md
+++ b/source/_posts/23041700.md
@@ -116,6 +116,6 @@ connectInfo.query(sql, data, (error, result, fields) => {
 ## 参考链接
 [node + express + mysql实现简单的增删查改](https://juejin.cn/post/6975750260530675726)
 [Node.js+Express+Mysql 实现增删改查](https://juejin.cn/post/6844903811606134792)
-
+[《使用nodejs连接mysql数据库》](https://juejin.cn/post/6920948406055616526)
 
 
