--- a/source/_posts/23021001.md
+++ b/source/_posts/23021001.md
@@ -23,7 +23,7 @@ tags:
 [BOM，DOM](https://shuangxunian.github.io/2023/03/10/23031000/)
 [对象](https://shuangxunian.github.io/2023/03/20/23032000/)
 [函数](https://shuangxunian.github.io/2023/04/12/23041200/)
-[运算符]()
+[运算符](https://shuangxunian.github.io/2023/04/14/23041401/)
 
 
 ## NodeJS
