--- a/source/_posts/22110603.md
+++ b/source/_posts/22110603.md
@@ -33,6 +33,17 @@ tags:
 [文本属性](https://shuangxunian.github.io/2023/02/02/23020201/)
 [css选择器](https://shuangxunian.github.io/2023/02/03/23020301/)
 [css组合器](https://shuangxunian.github.io/2023/02/03/23020302/)
+[伪类和伪元素](https://shuangxunian.github.io/2023/02/06/23020601/)
+[层叠与继承](https://shuangxunian.github.io/2023/02/09/23020902/)
+[]()
+[]()
+[]()
+[]()
+[]()
+[]()
+[]()
+[]()
+[]()
 
 ## js
 
