--- a/source/_posts/23051700.md
+++ b/source/_posts/23051700.md
@@ -61,6 +61,60 @@ app.get('/menu', (req,res) => {
 
 我们访问`localhost:3000/menu`，即可在页面中看见`{"name":"首页","key":1}`。
 
+## 中间件
+当我们想在某个函数做判断是否符合规则，是否放行；对一个请求进行多次处理时就需要中间件。
+默认情况下从上到下匹配，一但匹配成功终止匹配；我们可以通过next将请求交给下个中间件，直到结束请求的中间件。
+```javascript
+// 引入express
+const express = require('express')
+
+// 创建服务器
+const app = express()
+
+app.get('/menu', (req,res,next) => {
+  req.name = 'test'
+  next()
+})
+
+app.get('/menu', (req,res) => {
+  res.send(req.name)
+})
+
+// 监听3000端口
+app.listen(3000)
+
+```
+
+## use
+中间件有什么用呢：
+1. 路由保护，如果用户登录了，允许访问对应内容；如果用户没有登陆，直接拒绝。
+2. 当我们想拦截所有请求时，如此时更新服务器，我们应该拦截住所有请求，统一返回禁止登录，就可以通过use去拦截住所有：
+3. 自定义404页面
+4. 错误处理
+
+```javascript
+app.use((req,res,next) => {
+  res.send('禁止登录')
+})
+```
+
+同样，我们可以匹配路由，如：
+```javascript
+app.use('/menu', (req,res,next) => {
+  res.send('禁止访问menu')
+})
+```
+
+**注：** 如果是404页面，由于前面说过处理是按照顺序来着，此时我们应该把此路由放在所有页面的最下面。
+
+在程序执行的过程中，不可避免的会出现一些无法预料的错误，比如文件读取失败，数据库连接失败；错误处理中间件就是一个集中处理错误的地方。
+
+
+
+
+
+
+
 
 
 
