--- a/source/_posts/23101900.md
+++ b/source/_posts/23101900.md
@@ -1,1 +1,94 @@
-23
+---
+title: flex
+excerpt: 遇事不决flex，写篇文章积累一下
+date: 2023-10-19
+categories:
+- 技术文章
+tags:
+- css
+---
+
+## Flex 布局是什么
+Flex 是 Flexible Box 的缩写，意为"弹性布局"，用来为盒状模型提供最大的灵活性。任何一个容器都可以指定为 Flex 布局，只需要：
+```css
+.box{
+  display: flex;
+}
+```
+
+**注意**：设为 Flex 布局以后，子元素的float、clear和vertical-align属性将失效。
+
+## 基本概念
+此节了解即可，没啥重难点。
+
+采用 Flex 布局的元素，称为 Flex 容器（flex container），简称"容器"。它的所有子元素自动成为容器成员，称为 Flex 项目（flex item），简称"项目"。
+
+容器默认存在两根轴：水平的主轴（main axis，横轴）和垂直的交叉轴（cross axis，纵轴）。主轴的开始位置（与边框的交叉点）叫做main start，结束位置叫做main end；交叉轴的开始位置叫做cross start，结束位置叫做cross end。
+
+项目默认沿主轴排列。单个项目占据的主轴空间叫做main size，占据的交叉轴空间叫做cross size。
+
+## 容器属性
+
+### flex-direction
+主轴的方向（即项目的排列方向），有四个值：
+- row（默认）：主轴为水平方向，起点在左端。
+- row-reverse：主轴为水平方向，起点在右端。
+- column：主轴为垂直方向，起点在上沿。
+- column-reverse：主轴为垂直方向，起点在下沿。
+
+一般都用默认值，所以省略不写。
+
+### flex-wrap
+如果一条轴线排不下，如何换行，有三个值：
+- nowrap（默认）：不换行。
+- wrap：换行，第一行在上方。
+- wrap-reverse：换行，第一行在下方。
+
+一般都用默认值，所以省略不写。
+
+### flex-flow
+flex-flow是flex-direction和flex-wrap的简写形式，默认值为row nowrap。
+
+如果当flex-direction和flex-wrap都不用默认值的时候，可以用此。
+
+### justify-content
+justify-content属性定义了项目在主轴上的对齐方式。
+- flex-start（默认值）：左对齐
+- flex-end：右对齐
+- center： 居中
+- space-between：两端对齐到边，项目之间的间隔都相等。
+- space-around：每个项目两侧的间隔相等。所以，项目之间的间隔比项目与边框的间隔大一倍。
+
+一般来说，用space-between和space-around多一些，为了能均分，具体区别主要看两端需不需要额外留空。
+
+### align-items
+align-items属性定义项目在交叉轴上如何对齐。它可能取5个值：
+- stretch（默认值）：如果项目未设置高度或设为auto，将占满整个容器的高度。
+- flex-start：交叉轴的起点对齐。
+- flex-end：交叉轴的终点对齐。
+- center：交叉轴的中点对齐。
+- baseline: 项目的第一行文字的基线对齐。
+
+具体的对齐方式与交叉轴的方向有关，这个属性用的也不多，主要也是省略直接用默认值。
+
+### align-content属性
+align-content属性定义了多根轴线的对齐方式。它可能取6个值：
+- stretch（默认值）：轴线占满整个交叉轴。
+- flex-start：与交叉轴的起点对齐。
+- flex-end：与交叉轴的终点对齐。
+- center：与交叉轴的中点对齐。
+- space-between：与交叉轴两端对齐，轴线之间的间隔平均分布。
+- space-around：每根轴线两侧的间隔都相等。所以，轴线之间的间隔比轴线与边框的间隔大一倍。
+
+这个属性一般用得不多，要注意：如果项目只有一根轴线，该属性不起作用。
+
+## 项目属性
+
+
+
+
+
+
+
+
+
