--- a/source/_posts/22110603.md
+++ b/source/_posts/22110603.md
@@ -36,6 +36,7 @@ tags:
 [伪类和伪元素](https://shuangxunian.github.io/2023/02/06/23020601/)
 [层叠与继承](https://shuangxunian.github.io/2023/02/09/23020902/)
 [HTML 元素类型](https://shuangxunian.github.io/2023/11/23/23112300/)
+[CSS属性之 display](https://shuangxunian.github.io/2023/11/23/23112301/)
 []()
 []()
 []()
